--- a/estilo_projeto.css
+++ b/estilo_projeto.css
@@ -1,209 +1,219 @@
 @charset "UTF-8";
-   /*hoje*/
-   
-   /*fim hoje*/
-   
-   
-   
-    body
-	{
-		background-color: LightSkyBlue;
-		font-family: "Arial";
-	}
-	div#interface
-	{
-		position:relative;
-		width: 1000px;
-		background-color: #ffffff;
-		padding: 20px;
-		margin: -10px auto 0px auto;
-		box-shadow: 0px 0px 10px gray;
-	}
-	p
-	{
-		text-align: justify;
-	}
-	header#cabecalho nav#menu
-	{
-		display: block;
-	}
-	header#cabecalho nav#menu ul
-	{
-		list-style-type: none;
-		text-transform: uppercase;
-		position: relative;
-		top: 10px;
-		left: 35%;
-	}
-	header#cabecalho nav#menu li
-	{
-		display: inline;
-		background-color: #2f8dff;
-		color: white;
-		padding: 10px;
-		margin: 2px;
-		transition: background-color 1s;
-	}
-	header#cabecalho nav#menu li:hover
-	{
-		background-color: #34ccff;	
-		font-weight: bold;
-	}
-	header#cabecalho nav#menu a:link, a:visited
-	{
-		text-decoration: none;
-	}
-	header#cabecalho nav#menu a:hover 
-	{
-		text-decoration: underline;
-		
-	}
-	
-	div#interface header#cabecalho
-	{
-		height:160px;
-	  border-bottom: 1px solid black;
-	}
+/*hoje*/
 
-	header#cabecalho img#icone
-	{
-		position: relative;
-		left: 900px;
-		top: -100px;
-		width: 100px;
-		height: 100px;
+/*fim hoje*/
 
-	}
-	section#corpo{
-		display:block;
-		width:550px;
-		float:left;
-		padding-right: 20px;
-		border-right:1px solid black;
-	}
-	aside#lateral{
-		display:block;
-		width:400px;
-		float:right;
-		padding-left: 20px;
-		border-left: 1px solid black;
-	}
-        aside#lateral video#filme2{
-			position:absolute;
-		padding-left: -20px;
-			width:40%;
-			height:40%;	
-	}
-	aside#lateral img#adjTV2{
-			width:82%;
-			height:82%;
-	}
-        
-	footer#rodape{
-		clear: both;
-		border-top: 1px solid black;
-	}
-	footer#rodape p{
-		text-align:center;
-		font-size:80%;
-	}
-	div#interface figure.figura-legenda
-	{
-		border: 5px solid;
-		box-shadow: 1px 1px 4px black;
-		position: relative;
-	}
-	div#interface figure.figura-legenda img
-	{
-		width: 100%;
-		height: 100%;
-	}
-	div#interface figure.figura-legenda figcaption
-	{
-		position: absolute;
-		top: 0px;
-		background-color: rgba(0,0,0,0.4);
-		color: white;
-		padding: 10px;
-		box-sizing: border-box;
-		width: 100%;
-		height: 100%;
-		opacity: 0;
-	}
-	div#interface figure.figura-legenda:hover figcaption
-	{
-		opacity: 1;
-	}
-	
-	
-	   table {
-        border-collapse: collapse;
-		margin-top:10px;
-      }
-       tr {
-        border: 1px solid black;
-      }
-       tr.cinza {
-        background-color: lightGray;
-        color: black;
-            }
-				table tr.cinza:hover 
-	{
-		opacity: 1;		
-		font-weight: bold;		
-	}
-	
-	table tr.bold:hover 
-	{
-		opacity: 1;		
-		font-weight: bold;		
-	}
-	
-	/* inicio da barra de progresso */
-			
-		#notas {width: 80%; margin: 10% 10%; float: left;}
-		#notas .materia {background-color: #EEE; height: 26px; width: 100%; position: relative; margin-bottom: 5px; margin-top: 0px; border-radius: 5px; overflow: hidden;}
-		#notas .barra {position: absolute; left: 0px; height: 100%; float: left; border-radius: 5px; }
-		#notas .valor {font-family: arial; padding: 5px; font-size: 16px; font-weight: bold; float: right; z-index: 1; position: relative;}
-		#notas .nome {font-family: arial; padding: 5px 10px; font-size: 16px; font-weight: lighter; float: left; z-index: 1; position: relative;}
-		#notas .nota-1 > .barra {width: 10%;}
-		#notas .nota-2 > .barra {width: 20%;}
-		#notas .nota-3 > .barra {width: 30%;}
-		#notas .nota-4 > .barra {width: 40%;}
-		#notas .nota-5 > .barra {width: 50%;}
-		#notas .nota-6 > .barra {width: 60%;}
-		#notas .nota-7 > .barra {width: 70%;}
-		#notas .nota-8 > .barra {width: 80%;}
-		#notas .nota-9 > .barra {width: 90%;}
-		#notas .nota-10 > .barra {width: 100%;}
-		#notas .nota-10 > .valor {color: #FFF;}
-		#notas .aprovado .barra{background-color: #27ae60; background-image: linear-gradient(to bottom, #2ecc71, #27ae60);}
-		#notas .media .barra{background-color: #f1c40f; background-image: linear-gradient(to bottom, #f1c40f, #f39c12);}
-		#notas .reprovado .barra{background-color: #c0392b; background-image: linear-gradient(to bottom, #e74c3c, #c0392b);}
-   		
-		section#corpo video#filme{
-			position:absolute;
-			top:239px;
-			left:37px;
-			width:40%;
-			height:40%;	
-	}
+body
+{
+    background-color: LightSkyBlue;
+    font-family: "Arial";
+}
 
-		section#corpo img#adjTV{
-			top:320px;
-			width:82%;
-			height:82%;
-	}
-		audio#musica{
-			position:absolute;
-			top:390px;
-			left:650px;
-			width:25%;
-			height:25%;	
-	}
-		img#adjRad{
-			top:320px;
-			width:82%;
-			height:82%;
-	}
-	
+div#interface
+{
+    position:relative;
+    width: 1000px;
+    background-color: #ffffff;
+    padding: 20px;
+    margin: -10px auto 0px auto;
+    box-shadow: 0px 0px 10px gray;
+}
+p
+{
+    text-align: justify;
+}
+header#cabecalho nav#menu
+{
+    display: block;
+}
+header#cabecalho nav#menu ul
+{
+    list-style-type: none;
+    text-transform: uppercase;
+    position: relative;
+    top: 10px;
+    left: 35%;
+}
+header#cabecalho nav#menu li
+{
+    display: inline;
+    background-color: #2f8dff;
+    color: white;
+    padding: 10px;
+    margin: 2px;
+    transition: background-color 1s;
+}
+header#cabecalho nav#menu li:hover
+{
+    background-color: #34ccff;	
+    font-weight: bold;
+}
+header#cabecalho nav#menu a:link, a:visited
+{
+    text-decoration: none;
+}
+header#cabecalho nav#menu a:hover 
+{
+    text-decoration: underline;
+
+}
+
+div#interface header#cabecalho
+{
+    height:160px;
+    border-bottom: 1px solid black;
+}
+
+header#cabecalho img#icone
+{
+    position: relative;
+    left: 900px;
+    top: -100px;
+    width: 100px;
+    height: 100px;
+
+}
+section#corpo{
+    display:block;
+    width:550px;
+    float:left;
+    padding-right: 20px;
+}
+aside#lateral{
+    display:block;
+    width:400px;
+    float:right;
+    padding-left: 20px;
+    border-left: 1px solid black;
+}
+aside#lateral video#filme2{
+    position: relative;
+    width:80%;
+    height:80%;
+    top:-233px;
+    left: 34px;
+}
+aside#lateral img#adjTV2{
+    padding: 20px;
+    width:87%;
+    height:87%;
+}
+
+footer#rodape{
+    clear: both;
+    border-top: 1px solid black;
+}
+footer#rodape p{
+    text-align:center;
+    font-size:80%;
+}
+div#interface figure.figura-legenda
+{
+    border: 5px solid;
+    box-shadow: 1px 1px 4px black;
+    position: relative;
+    width: 60%;
+    height: 60%;
+    top: 20px;
+    left: 75px;
+}
+div#interface figure.figura-legenda img
+{
+    width: 100%;
+    height: 100%;
+}
+div#interface figure.figura-legenda figcaption
+{
+    position: absolute;
+    top: 0px;
+    background-color: rgba(0,0,0,0.4);
+    color: white;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+div#interface figure.figura-legenda:hover figcaption
+{
+    opacity: 1;
+}
+
+
+table {
+    width: 300px;
+    border-collapse: collapse;
+    margin:20px;
+    margin-left: 50px;
+}
+table tr {
+    border: 1px solid black;
+}
+table tr.bold {
+    background-color: white;
+    color: black;
+}
+table tr.cinza {
+    background-color: lightGray;
+    color: black;
+}
+table tr.cinza:hover 
+{
+    opacity: 1;		
+    font-weight: bold;		
+}
+
+table tr.bold:hover 
+{
+    opacity: 1;		
+    font-weight: bold;		
+}
+
+/* inicio da barra de progresso */
+
+#notas {width: 80%; margin: 10% 10%; float: left;}
+#notas .materia {background-color: #EEE; height: 26px; width: 100%; position: relative; margin-bottom: 5px; margin-top: 0px; border-radius: 5px; overflow: hidden;}
+#notas .barra {position: absolute; left: 0px; height: 100%; float: left; border-radius: 5px; }
+#notas .valor {font-family: arial; padding: 5px; font-size: 16px; font-weight: bold; float: right; z-index: 1; position: relative;}
+#notas .nome {font-family: arial; padding: 5px 10px; font-size: 16px; font-weight: lighter; float: left; z-index: 1; position: relative;}
+#notas .nota-1 > .barra {width: 10%;}
+#notas .nota-2 > .barra {width: 20%;}
+#notas .nota-3 > .barra {width: 30%;}
+#notas .nota-4 > .barra {width: 40%;}
+#notas .nota-5 > .barra {width: 50%;}
+#notas .nota-6 > .barra {width: 60%;}
+#notas .nota-7 > .barra {width: 70%;}
+#notas .nota-8 > .barra {width: 80%;}
+#notas .nota-9 > .barra {width: 90%;}
+#notas .nota-10 > .barra {width: 100%;}
+#notas .nota-10 > .valor {color: #FFF;}
+#notas .aprovado .barra{background-color: #27ae60; background-image: linear-gradient(to bottom, #2ecc71, #27ae60);}
+#notas .media .barra{background-color: #f1c40f; background-image: linear-gradient(to bottom, #f1c40f, #f39c12);}
+#notas .reprovado .barra{background-color: #c0392b; background-image: linear-gradient(to bottom, #e74c3c, #c0392b);}
+
+section#corpo video#filme{
+    position:relative;
+    top:-291px;
+    left:20px;
+    width:80%;
+    height:80%;	
+}
+
+section#corpo img#adjTV{
+    top:320px;
+    width:87%;
+    height:87%;
+}
+audio#musica{
+    position:relative;
+    top:-90px;
+    right:-20px;
+    width:70%;
+    height:70%;	
+}
+img#adjRad{
+    top:320px;
+    width:80%;
+    height:80%;
+}
+
